# ChangeLog for games-misc/typespeed
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-misc/typespeed/ChangeLog,v 1.20 2009/05/31 18:20:51 ranger Exp $

  31 May 2009; Brent Baude <ranger@gentoo.org> typespeed-0.6.4.ebuild:
  Marking typespeed-0.6.4 ~ppc64 for bug 270187

  05 Dec 2008; Tristan Heaven <nyhm@gentoo.org> typespeed-0.6.4.ebuild:
  Respect CC, bug #244084

  06 Dec 2007; Michael Sterrett <mr_bones_@gentoo.org>
  -typespeed-0.5.1.ebuild, -typespeed-0.6.2.ebuild, -typespeed-0.6.3.ebuild,
  typespeed-0.6.4.ebuild:
  force stabilize for security bug #201435 and remove old vulnerable versions

*typespeed-0.6.4 (01 Dec 2007)

  01 Dec 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +typespeed-0.6.4.ebuild:
  version bump

*typespeed-0.6.3 (10 Nov 2007)

  10 Nov 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +typespeed-0.6.3.ebuild:
  version bump

*typespeed-0.6.2 (01 Jun 2007)

  01 Jun 2007; Tristan Heaven <nyhm@gentoo.org> +typespeed-0.6.2.ebuild:
  Version bump

  17 Mar 2007; Michael Sterrett <mr_bones_@gentoo.org>
  typespeed-0.6.1.ebuild:
  make the highscore stuff look better

*typespeed-0.6.1 (16 Mar 2007)

  16 Mar 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +typespeed-0.6.1.ebuild:
  version bump

  12 Mar 2007; Marius Mauch <genone@gentoo.org> typespeed-0.5.1.ebuild:
  Replacing einfo with elog

*typespeed-0.5.3 (01 Oct 2006)

  01 Oct 2006; Tristan Heaven <nyhm@gentoo.org>
  -files/typespeed-0.5.0-statedir-fix.patch,
  -files/typespeed-0.5.0-time.patch, -files/01_all_statedir-fix.patch,
  -typespeed-0.4.4-r1.ebuild, -typespeed-0.5.0.ebuild,
  +typespeed-0.5.3.ebuild:
  Version bump

  10 Jul 2006; Thomas Cort <tcort@gentoo.org> typespeed-0.5.1.ebuild:
  Stable on alpha.

*typespeed-0.5.1 (15 Jun 2006)

  15 Jun 2006; Mike Frysinger <vapier@gentoo.org> +typespeed-0.5.1.ebuild:
  Version bump.

  14 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  typespeed-0.5.0.ebuild: