@@ -1,4 +1,6 @@
 DIST typespeed-0.6.4.tar.gz 250596 RMD160 b857333a5f9e07e54f49d94eaed66555a17cce0e SHA1 e2383b746d20262282b0357a8954c9d3a734a911 SHA256 80eafbbdb87720d6ca57bfbd3f5eaa5b66c1f2a4ec3a4a5ce9b0e01335a02644
+DIST typespeed-0.6.5.tar.gz 254170 RMD160 790f53020576bd7cbf380b2b9df9701efb82595d SHA1 b44be835404b840ba6d5408b42868d0af454d57d SHA256 5c860385ceed8a60f13217cc0192c4c2b4705c3e80f9866f7d72ff306eb72961
 EBUILD typespeed-0.6.4.ebuild 1243 RMD160 42164f9d8f9bf8cfaccdaff4aeb8fa7fcdb57c5a SHA1 2c4b42e7d43c654c9d941205c2b66d7aa5f7423b SHA256 ecca1aa2b306ae1f7cfd7a07f35c6c82a6892b101fc822d9184186f00e3cf271
-MISC ChangeLog 3120 RMD160 b4cfb0144d58d4f91ebe85946c4d3457c9fb949c SHA1 35371729ee8d87a7e98b671b6c9b0613c69ccbd6 SHA256 247475907f8240cb44910243493b57dd9ec3be20031d8b406e4e50ab52db1d2c
+EBUILD typespeed-0.6.5.ebuild 1156 RMD160 372cf0326fe25558167689da3edf8fb832ba3db6 SHA1 d04c47bc425f02b4036faf0df922d0ceb5e4e6af SHA256 ebe1a5ef6a85936391bcf7f64f28db1f2c9ce0d538502a65ff3c2143e072e33f
+MISC ChangeLog 3267 RMD160 e7d25766bff115351d259de38cf4fd65826ab8c6 SHA1 7c9f4f7872baea0365f669fcb4ebf796c2107206 SHA256 70473a72542e7c422f23501ee177267a5028751045fd854a07f45008c9bee825
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
