@@ -1,0 +1,48 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/games-misc/typespeed/typespeed-0.6.5.ebuild,v 1.1 2009/06/16 17:05:33 mr_bones_ Exp $
+
+EAPI=2
+inherit autotools eutils games
+
+DESCRIPTION="Test your typing speed, and get your fingers CPS"
+HOMEPAGE="http://tobias.eyedacor.org/typespeed/"
+SRC_URI="http://tobias.eyedacor.org/typespeed/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~ppc ~ppc64 ~x86"
+IUSE="nls"
+
+RDEPEND="sys-libs/ncurses
+	nls? ( virtual/libintl )"
+DEPEND="${RDEPEND}
+	nls? ( sys-devel/gettext )"
+
+src_prepare() {
+	sed -i \
+		-e 's/testsuite//' \
+		-e 's/doc//' \
+		Makefile.am \
+		|| die "sed failed"
+	sed -i \
+		-e '/^CC =/d' \
+		src/Makefile.am \
+		|| die "sed failed"
+	eautoreconf
+}
+
+src_configure() {
+	egamesconf \
+		--disable-dependency-tracking \
+		--localedir=/usr/share/locale \
+		--docdir=/usr/share/doc/${PF} \
+		--with-highscoredir="${GAMES_STATEDIR}" \
+		$(use_enable nls)
+}
+
+src_install() {
+	emake DESTDIR="${D}" install || die "emake install failed"
+	dodoc AUTHORS BUGS ChangeLog NEWS TODO doc/README
+	prepgamesdirs
+}
