@@ -1,6 +1,12 @@
 # ChangeLog for games-misc/typespeed
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/typespeed/ChangeLog,v 1.20 2009/05/31 18:20:51 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/typespeed/ChangeLog,v 1.21 2009/06/16 17:05:33 mr_bones_ Exp $
+
+*typespeed-0.6.5 (16 Jun 2009)
+
+  16 Jun 2009; Michael Sterrett <mr_bones_@gentoo.org>
+  +typespeed-0.6.5.ebuild:
+  version bump (bug #274295)
 
   31 May 2009; Brent Baude <ranger@gentoo.org> typespeed-0.6.4.ebuild:
   Marking typespeed-0.6.4 ~ppc64 for bug 270187
